core/workflow-pod-brain/scripts/envoy-configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: default
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - name: listener_0
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 10000
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: ingress_http
                    upgrade_configs:
                      - upgrade_type: websocket
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: local_service
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: "/wsapi/workflow-websocket"
                              route:
                                cluster: dynamic_service
                                prefix_rewrite: "/wsapi/workflow-websocket"
                    http_filters:
                      - name: envoy.filters.http.lua
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                          inline_code: |
                            function envoy_on_request(request_handle)
                                local uri = request_handle:headers():get(":path")
                                local wid = string.match(uri, "wid=(%d+)")
                                local uid = string.match(uri, "uid=(%d+)")
                                if uid then
                                  local new_host = "user-pod-" .. uid .. "-" .. wid .. ".workflow-pods.wf-pod-pool.svc.cluster.local:8080"
                                  request_handle:headers():replace(":authority", new_host)
                                end
                              end
                      - name: envoy.filters.http.dynamic_forward_proxy
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.dynamic_forward_proxy.v3.FilterConfig
                          dns_cache_config:
                            name: dynamic_dns_cache
                            dns_lookup_family: V4_ONLY
                            dns_refresh_rate: 1s
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

                    access_log:
                      - name: envoy.access_loggers.stdout
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog

      clusters:
        - name: dynamic_service
          connect_timeout: 0.25s
          lb_policy: CLUSTER_PROVIDED
          cluster_type:
            name: envoy.clusters.dynamic_forward_proxy
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.clusters.dynamic_forward_proxy.v3.ClusterConfig
              dns_cache_config:
                name: dynamic_dns_cache
                dns_lookup_family: V4_ONLY
                dns_refresh_rate: 1s
