core/workflow-pod-brain/scripts/workflow_pods_namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wf-pod-brain
---
apiVersion: v1
kind: Namespace
metadata:
  name: wf-pod-pool
