core/workflow-pod-brain/scripts/workflow_pods_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workflow-pods
  namespace: default
spec:
  clusterIP: None
  selector:
    workflow: worker
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
